	Fixed bug where IE was producing an auto save message if you selected a color from the color split button.
	Fixed bug where backspace sometimes would move the caret to the end of the previous block in Gecko.
	Fixed bug where the rowlayout manager didn't work as described in the documentation.
	Fixed so the advhr plugin produces XHTML valid output instead of non standard attributes.
	Fixed so blockquote gets converted into [quote] in when the bbcode plugin is enabled.
	Fixed so theme_advanced_font_sizes can be named for example Font 1=1, Font 2=2 etc.
	Fixed so editor_selector/editor_deselector can be regexps. By default only strings are allowed not part regexps like before.
	Fixed so that the version suffix is optional. It still requires the build process so you need to export it manually.
	Fixed so it's possible to tab to table cells in non Gecko browsers and also produce new rows if you tab at the end of a table. Contributed by Josh Peek.
Version 3.0.7 (2008-04-14)
	Added new version suffix to all internal GET requests to make sure that the users cache gets cleared correctly.
	Fixed issue with isDirty returning true event if it wasn't dirty on IE due to changes in tables during initialization.
	Fixed memory leak in IE where if a page was unloaded before all images on the page was loaded it would leak.
	Fixed bug in IE where underline and strikethrough could produce an exception error message.
	Fixed bug where inserting paragraphs in totally empty table cells would produce odd effects.
	Fixed bug where layer style data wasn't updated correctly due to some performance enhancements with the DOM serializer.
	Fixed bug where it would convert the wrong element if there was two elements with the same name and id on the page.
	Fixed bug where it was possible to add style information to the body element using the style plugin.
	Fixed bug where Gecko would add an extra undo level some times due to the blur event.